agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: agent
  name: agent
spec:
  selector:
    matchLabels:
      io.kompose.service: agent
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/convert-vispeahen: "true"
        io.kompose.service: agent
    spec:
      containers:
        - env:
            - name: AGENT_CLUSTER_ADDR
              value: tasks.agent
          image: portainer/agent
          name: agent
          resources: {}
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: agent-claim0
            - mountPath: /var/lib/docker/volumes
              name: agent-claim1
      restartPolicy: Always
      volumes:
        - name: agent-claim0
          persistentVolumeClaim:
            claimName: agent-claim0
        - name: agent-claim1
          persistentVolumeClaim:
            claimName: agent-claim1
  updateStrategy: {}
status:
  currentNumberScheduled: 0
  desiredNumberScheduled: 0
  numberMisscheduled: 0
  numberReady: 0
