apache-drill1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: apache-drill1
  name: apache-drill1
spec:
  containers:
    - image: nexus.bisoft.com.tr/apache-drill-2g
      name: apache-drill1
      ports:
        - containerPort: 8047
      resources:
        limits:
          cpu: 500m
          memory: "2147483648"
  restartPolicy: OnFailure
status: {}
