backup-restore1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: backup-restore1
  name: backup-restore1
spec:
  containers:
    - env:
        - name: _CONTEXT
          value: prod
      image: nexus.bisoft.com.tr/backup-restore:v1.0.0
      name: backup-restore1
      resources:
        limits:
          cpu: 500m
          memory: "1073741824"
      volumeMounts:
        - mountPath: /BackupFiles
          name: backup-restore1-claim0
  restartPolicy: OnFailure
  volumes:
    - name: backup-restore1-claim0
      persistentVolumeClaim:
        claimName: backup-restore1-claim0
status: {}
