mongodb-stream-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: mongodb-stream
  name: mongodb-stream
spec:
  containers:
    - image: nexus.bisoft.com.tr/mongo:v4.2.7
      name: mongodb-stream
      resources:
        limits:
          cpu: 300m
          memory: "262144e3"
      volumeMounts:
        - mountPath: /data/db
          name: mongodb-stream
  restartPolicy: OnFailure
  volumes:
    - name: mongodb-stream
      persistentVolumeClaim:
        claimName: mongodb-stream
status: {}
