mongodb1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: mongodb1
  name: mongodb1
spec:
  containers:
    - image: nexus.bisoft.com.tr/mongodb:4.4.6
      name: mongodb1
      ports:
        - containerPort: 27017
      resources:
        limits:
          cpu: 300m
          memory: "262144e3"
      volumeMounts:
        - mountPath: /data/db
          name: mongo
  restartPolicy: OnFailure
  volumes:
    - name: mongo
      persistentVolumeClaim:
        claimName: mongo
status: {}
