mysql1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: mysql1
  name: mysql1
spec:
  containers:
    - env:
        - name: MYSQL_ROOT_PASSWORD
          value: bisoft
      image: nexus.bisoft.com.tr/mysql-stable:8.0.20
      name: mysql1
      ports:
        - containerPort: 3306
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql
  restartPolicy: OnFailure
  volumes:
    - name: mysql
      persistentVolumeClaim:
        claimName: mysql
status: {}
