portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/convert-vispeahen: "true"
        io.kompose.service: portainer
    spec:
      containers:
        - args:
            - -H
            - tcp://tasks.agent:9001
            - --tlsskipverify
          image: portainer/portainer
          name: portainer
          ports:
            - containerPort: 9000
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: portainer-data
      restartPolicy: Always
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-data
status: {}
