python-utils1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: python-utils1
  name: python-utils1
spec:
  containers:
    - env:
        - name: FLASK_APP
          value: app.py
        - name: MODE
          value: PRODUCTION
      image: nexus.bisoft.com.tr/python-utils:v1.2.0
      name: python-utils1
      resources: {}
      volumeMounts:
        - mountPath: /app/upload_folder
          name: python-utils1-claim0
        - mountPath: /app/duckdb
          name: python-utils1-claim1
  restartPolicy: OnFailure
  volumes:
    - name: python-utils1-claim0
      persistentVolumeClaim:
        claimName: python-utils1-claim0
    - name: python-utils1-claim1
      persistentVolumeClaim:
        claimName: python-utils1-claim1
status: {}
