query-engine1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: query-engine1
  name: query-engine1
spec:
  containers:
    - env:
        - name: _CONTEXT
          value: prod
      image: nexus.bisoft.com.tr/queryengine:v2.2.0
      name: query-engine1
      resources: {}
  restartPolicy: OnFailure
status: {}
