resourceserver1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: resourceserver1
  name: resourceserver1
spec:
  containers:
    - env:
        - name: _CONTEXT
          value: prod
      image: nexus.bisoft.com.tr/resourceserver:v1.0.2
      name: resourceserver1
      resources:
        limits:
          cpu: 500m
          memory: "1073741824"
  restartPolicy: OnFailure
status: {}
