stream1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: stream1
  name: stream1
spec:
  containers:
    - env:
        - name: _CONTEXT
          value: prod
      image: nexus.bisoft.com.tr/stream:v1.1.1
      name: stream1
      resources:
        limits:
          cpu: 200m
          memory: "262144e3"
  hostname: stream1
  restartPolicy: OnFailure
status: {}
