vispeahen1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/convert-vispeahen: "true"
    io.kompose.service: vispeahen1
  name: vispeahen1
spec:
  containers:
    - image: nexus.bisoft.com.tr/vispeahen:v3.10.0
      name: vispeahen1
      ports:
        - containerPort: 443
        - containerPort: 80
      resources:
        limits:
          cpu: 600m
          memory: "1073741824"
      volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: vispeahen1-claim0
        - mountPath: /etc/nginx/ssl
          name: vispeahen1-claim1
        - mountPath: /etc/nginx/html/vispeahen/images
          name: vispeahen1-claim2
  restartPolicy: OnFailure
  volumes:
    - name: vispeahen1-claim0
      persistentVolumeClaim:
        claimName: vispeahen1-claim0
    - name: vispeahen1-claim1
      persistentVolumeClaim:
        claimName: vispeahen1-claim1
    - name: vispeahen1-claim2
      persistentVolumeClaim:
        claimName: vispeahen1-claim2
status: {}
