apache-drill1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: apache-drill1
  name: apache-drill1
spec:
  ports:
    - name: "8047"
      port: 8047
      targetPort: 8047
  selector:
    io.kompose.service: apache-drill1
status:
  loadBalancer: {}
