portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-stack-v3.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: portainer
status:
  loadBalancer: {}
