convert-vispeahen-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: convert-vispeahen
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/convert-vispeahen: "true"
  podSelector:
    matchLabels:
      io.kompose.network/convert-vispeahen: "true"
